# atomskygaze

./: .gitignore  .gitmodules  Cargo.toml  README-ja.md  README.md  algorithm.md  atomconf.toml  test.sh
.cargo/: config.toml
.github/workflows/: main.yml
assets/: index.html  script.js  style.css
assets/web/: index.html  script.js  style.css
atom-skygaze/: Cargo.toml
atom-skygaze/src/: config.rs  detection.rs  download.rs  font.rs  gpio.rs  imp.rs  isp.rs  main.rs  osd.rs  record.rs  system.rs  trim.rs  websocket.rs  webstream.rs
buildscripts/: build_all  build_rust.sh  linux_prebuild_hook.sh  local_build.sh  make_initramfs.sh  post_fakeroot.sh  post_image.sh  setup_buildroot.sh
configs/: atomskygaze_defconfig  atomskygaze_github_actions_defconfig  atomskygaze_workflow_defconfig  config-workflow.toml  kernel.config  kernel_workflow.config
crates/atom-skygaze/: Cargo.toml
crates/atom-skygaze/src/: config.rs  detection.rs  font.rs  imp.rs  isp.rs  main.rs  osd.rs  record.rs  system.rs  watchdog.rs  websocket.rs  webstream.rs
crates/isvp-sys/src/: lib.rs  wrapper.rs
crates/mxu/: README.md  build.rs  mxu_imgproc.c
crates/mxu/examples/: mask.rs
crates/mxu/src/: lib.rs
crates/solver/: Cargo.toml  build.rs
crates/solver/src/: const_lines  constellation.rs  lib.rs  wrapper.rs
custompackages/package/: Config.in
custompackages/package/opencv4/: opencv4.mk
isvp-rs/: Cargo.toml
isvp-rs/src/: lib.rs
isvp-rs/src/imp/: audio.rs  mod.rs
isvp-sys/: Cargo.toml  build.rs  wrapper.h
isvp-sys/src/: a  b  c  lib.rs  wrapper.rs
mxu/: Cargo.toml  README.md  build.rs  libmxu_imgproc.S  mxu_imgproc.c  mxu_imgproc.h
mxu/src/: lib.rs
output/assets/: index.html  script.js  style.css
overlay_rootfs/etc/: dhcpcd.conf  dnsmasq.conf  hostapd.conf
overlay_rootfs/etc/init.d/: rcS  (+10 more)
overlay_rootfs/scripts/: network_init.sh
patches/: minimp4.patch  rust-fitsio.patch
patches/fitsio-sys/: build.rs
solver/: Cargo.toml  build.rs  wrapper.h
solver/example/: sep.rs
solver/src/: const_data  lib.rs
(+20 files in other folders)
