[package]
name = "atom-skygaze"
version = "0.1.3"
edition = "2021"
authors = ["tmmgq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitsio = { version = "0.21.2", features = ["fitsio-src"] }
opencv = { version = "0.89", features = ["videoio", "imgproc", "imgcodecs", "gapi", "video", "calib3d", "features2d", "flann", "ximgproc", "clang-runtime"] }
isvp-sys = { path = "../isvp-sys" }
mxu = { path = "../mxu" }
env_logger = "0.11.3"
log = "0.4.21"
base64 = "0.22.0"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version="0.7.5", features = ["ws"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
minimp4 = { path = "../submodules/minimp4.rs/packages/minimp4" }
chrono = "0.4.37"
lz4 = "1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"
tokio-util = { version = "0.7.10", features = ["io"] }
libc = "0.2.154"
